--- a/style.css
+++ b/style.css
@@ -967,7 +967,7 @@ body {
     width: 353.2px;
   }
 }
-@media (min-width: 768px) and (max-width: 991.98px) {
+@media (min-width: 578px) and (max-width: 768px) {
   .main-nav {
     padding: 20px;
   }
@@ -1314,18 +1314,23 @@ body {
   .main-nav .nav-bar {
     margin-right: 119px;
   }
+  .main-nav img {
+    width: 15%;
+    align-self: center;
+    margin-left: 6px;
+  }
   .main-nav {
-    padding: 20px 25px 0 0;
+    padding: 20px 0px 0 0;
   }
   .main-nav img {
     height: 7vh;
     width: 100%;
     -o-object-fit: contain;
        object-fit: contain;
-    margin-left: 15px;
+    margin-left: -24px;
   }
   .main-nav .nav-bar {
-    margin-right: 139px;
+    margin-right: 89px;
   }
   .main-nav .nav-bar a {
     display: none;
@@ -1369,6 +1374,9 @@ body {
     width: 100%;
     text-align: center;
     margin-top: 30px;
+  }
+  .main-nav .fas {
+    font-size: 25px;
   }
   .main-nav .overlay a {
     padding: 8px;
@@ -1515,13 +1523,14 @@ body {
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
+    margin-left: -10px;
   }
   .about .container .gallery {
     display: flex;
   }
   .about .container .gallery img {
-    height: 29.5vh;
-    margin-bottom: 15px;
+    height: 25.5vh;
+    margin-bottom: 12px;
     margin-right: 13px;
   }
   .about .container .gallery .natural {
@@ -1542,8 +1551,8 @@ body {
     padding-left: 0px;
   }
   .about .container .gun #video {
-    width: 320px;
-    height: 300px;
+    width: 276px;
+    height: 250px;
   }
   .about .container .gun p {
     padding-top: 12px;
@@ -1555,9 +1564,23 @@ body {
     font-size: 8px;
     padding: 7px 14px;
   }
-  .about .container .gun .nato {
-    height: 42.3vh;
-    width: 317.2px;
+  .about .container .gallery img {
+    height: 27.5vh;
+    margin-bottom: 12px;
+    margin-right: 13px;
+    width: 156px;
+  }
+  .about .container .rong {
+    margin-left: 36px;
+  }
+  .about .container .gun #video {
+    -o-object-fit: contain;
+    object-fit: contain;
+    height: 41.6vh;
+    width: 325.2px;
+  }
+  .about .container .gun {
+    padding-left: 36px;
   }
   .main {
     padding: 60px 65px 0 27px;
@@ -1583,14 +1606,14 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: end;
-    width: 322px;
-    height: 40vh;
+    width: 313px;
+    height: 38vh;
   }
   .main .get .kim2 .late {
     -o-object-fit: contain;
        object-fit: contain;
-    width: 9.3%;
-    height: 5vh;
+    width: 8%;
+    height: 4vh;
     margin-left: 20PX;
   }
   .main .get .kim1 {
@@ -1599,14 +1622,14 @@ body {
     -o-object-fit: contain;
        object-fit: contain;
     align-items: end;
-    width: 322px;
-    height: 40vh;
+    width: 313px;
+    height: 38vh;
   }
   .main .get .kim1 .visa {
     -o-object-fit: contain;
        object-fit: contain;
-    width: 9.3%;
-    height: 5vh;
+    width: 9%;
+    height: 4vh;
     margin-left: 20PX;
   }
   .main .get p:first-of-type {
@@ -1623,12 +1646,6 @@ body {
   .main .get .name h3, .main .get .name p {
     margin-left: -38px;
   }
-  .about .container .gun video {
-    -o-object-fit: contain;
-    object-fit: contain;
-    height: 41.6vh;
-    width: 320.2px;
-  }
   .services {
     padding: 40px 27px;
   }
@@ -1644,11 +1661,11 @@ body {
     flex-direction: column;
   }
   .services .now {
-    width: 81%;
-    height: 69vh;
+    width: 72%;
+    height: 53vh;
   }
   .services .now .good {
-    height: 69.2vh;
+    height: 53.8vh;
     width: 100%;
   }
   .services .now .good img {
@@ -1658,21 +1675,21 @@ body {
   }
   .services .now .good h5 {
     font-size: 17px;
-    padding-right: 52px;
-    margin-bottom: 5px;
+    padding-right: 35px;
+    margin-bottom: 7px;
   }
   .services .super {
     margin: 20px 0;
     background-color: #742296;
     color: white;
-    width: 82%;
-    height: 69vh;
+    width: 72%;
+    height: 53vh;
     padding: 20px 15px;
     position: relative;
   }
   .services .super .more {
-    height: 66.2vh;
-    width: 96%;
+    height: 50.9vh;
+    width: 94.9%;
     display: flex;
     align-items: end;
     justify-content: end;
@@ -1683,28 +1700,31 @@ body {
        object-fit: contain;
     width: 13%;
     height: 6vh;
-    opacity: 70%;
+    opacity: 100%;
     margin-right: 3.2px;
   }
   .services .super h3 {
-    font-size: 15px;
-  }
-  .services .super li {
-    font-size: 15px;
-    padding: 1px;
-  }
-  .services .super h4 {
-    font-size: 17px;
-  }
-  .services .super li:first-child {
     font-size: 14px;
   }
+  .services .super li {
+    font-size: 10px;
+    padding: 0px;
+  }
+  .services .super h4 {
+    font-size: 14px;
+  }
+  .services .super h4 .line {
+    width: 55px;
+  }
+  .services .super li:first-child {
+    font-size: 12px;
+  }
   .services .foni {
-    width: 81%;
-    height: 69vh;
+    width: 72%;
+    height: 53vh;
   }
   .services .bad {
-    height: 69.1vh;
+    height: 53.89vh;
     width: 100%;
   }
   .services .bad img {
@@ -1714,8 +1734,8 @@ body {
   }
   .services .bad h5 {
     font-size: 17px;
-    padding-right: 89px;
-    margin-bottom: 11px;
+    padding-right: 70px;
+    margin-bottom: 15px;
   }
   .isdo {
     padding: 20px 0px 20px 24px;
@@ -1817,6 +1837,99 @@ body {
   .instagram .kill a {
     font-size: 7px;
     padding: 7px 12px;
+  }
+}
+@media (min-width: 414px) and (max-width: 500px) {
+  .main-nav {
+    padding: 20px 0px 0 0;
+  }
+  .main-nav .nav-bar {
+    margin-right: 118px;
+  }
+  .banner .text h1 {
+    font-size: 31px;
+    margin-top: 0px;
+    line-height: 32px;
+  }
+  .main-nav img {
+    height: 7vh;
+    width: 100%;
+    -o-object-fit: contain;
+    object-fit: contain;
+    margin-left: -4px;
+  }
+  .banner img {
+    width: 184px;
+    height: 57vh;
+    -o-object-fit: cover;
+    object-fit: cover;
+    padding-right: 13px;
+  }
+  .about .container .gun #video {
+    width: 350px;
+    height: 250px;
+  }
+  .about .container .gallery img {
+    height: 25.5vh;
+    width: 167px;
+    margin-bottom: 12px;
+    margin-right: 13px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .about .container .rong {
+    margin-left: 24px;
+  }
+  .about .container .gun {
+    padding-left: 22px;
+  }
+  .main .get .kim1 {
+    display: flex;
+    justify-content: flex-end;
+    -o-object-fit: contain;
+    object-fit: contain;
+    align-items: end;
+    width: 358px;
+    height: 39vh;
+  }
+  .main .get .kim2 {
+    margin-top: 20px;
+    margin-left: -40px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
+    width: 359px;
+    height: 42vh;
+  }
+  .main .get .kim1 .visa {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 8%;
+    height: 4vh;
+    margin-left: 24PX;
+  }
+  .main .get .kim2 .late {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 8%;
+    height: 3.8vh;
+    margin-left: 20PX;
+  }
+  .services .super .more img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 13%;
+    height: 5.8vh;
+    opacity: 100%;
+    margin-right: 1.2px;
+  }
+  .services .super .more img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 13%;
+    height: 5.8vh;
+    opacity: 100%;
+    margin-right: 1.2px;
   }
 }
 @media (min-width: 1366px) {
