--- a/style.scss
+++ b/style.scss
@@ -1520,7 +1520,7 @@ h1{
 
 
 
-@media   (min-width: 768px) and (max-width: 991.98px) {
+@media   (min-width: 578px) and (max-width: 768px) {
 
 
     
@@ -2072,21 +2072,27 @@ p {
     }
 
 
+    .main-nav img {
+        width: 15%;
+        align-self: center;
+        margin-left: 6px;
+    }
 
-    .main-nav{
-        padding: 20px 25px 0 0;
+    .main-nav {
+        padding: 20px 0px 0 0;
+    
         
     
         img{
             height: 7vh;
             width: 100%;
             object-fit: contain;
-            margin-left: 15px;
+            margin-left: -24px;
             
         }
     
         .nav-bar{
-            margin-right:139px;
+            margin-right:89px;
     
     
     
@@ -2155,6 +2161,9 @@ p {
         
       }
       
+      .fas{
+        font-size: 25px;
+      }
     
       .overlay a {
         padding: 8px;
@@ -2359,6 +2368,7 @@ h2{
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
+    margin-left: -10px;
   
 
  
@@ -2367,8 +2377,8 @@ h2{
         
         
         img{
-            height:29.5vh;
-            margin-bottom: 15px;
+            height:25.5vh;
+            margin-bottom: 12px;
             margin-right: 13px;
         }
         
@@ -2401,8 +2411,8 @@ h2{
         padding-left: 0px;
         
         #video {
-            width:320px; 
-            height:300px;
+            width:276px; 
+            height:250px;
           }
 
 
@@ -2433,10 +2443,28 @@ h2{
 }
 
  
-.about .container .gun .nato {
-    height: 42.3vh;
-    width: 317.2px;
+.about .container .gallery img {
+        height: 27.5vh;
+        margin-bottom: 12px;
+        margin-right: 13px;
+        width: 156px;
 }
+
+.about .container .rong {
+    margin-left: 36px;
+}
+
+
+.about .container .gun #video {
+    -o-object-fit: contain;
+    object-fit: contain;
+    height: 41.6vh;
+    width: 325.2px;
+}
+.about .container .gun {
+    padding-left: 36px;
+}
+
 
 .main{
     padding: 60px 65px 0 27px  ;
@@ -2470,15 +2498,15 @@ h2{
          display: flex;
          justify-content: flex-end;
          align-items: end;
-         width: 322px;
-         height: 40vh;
+         width: 313px;
+         height: 38vh;
      
 
 
          .late{
              object-fit: contain;
-             width: 9.3%;
-             height: 5.0vh;
+             width: 8%;
+             height: 4.0vh;
              margin-left: 20PX;
          }
      }
@@ -2488,15 +2516,15 @@ h2{
          justify-content: flex-end;
          object-fit: contain;
          align-items: end;
-         width: 322px;
-         height: 40vh;
+         width: 313px;
+         height: 38vh;
      
 
          .visa{
              
              object-fit: contain;
-             width: 9.3%;
-             height: 5.0vh;
+             width: 9%;
+             height: 4.0vh;
              margin-left: 20PX;
          }
      }
@@ -2538,12 +2566,6 @@ p{
 }
 
 
-.about .container .gun video {
-    -o-object-fit: contain;
-    object-fit: contain;
-    height: 41.6vh;
-    width: 320.2px;
-}
 
 
 .services{
@@ -2569,12 +2591,13 @@ p{
 
     .now{
   
-        width: 81%;
-        height: 69vh;
+        width: 72%;
+        height: 53vh;
+
        
         .good{
 
-            height: 69.2vh;
+            height: 53.8vh;
             width:100%;
             
             
@@ -2586,8 +2609,8 @@ p{
     
             h5{
                 font-size: 17px;
-                padding-right: 52px;
-                margin-bottom: 5px;
+                padding-right: 35px;
+                margin-bottom: 7px;
             }
     
         }
@@ -2601,16 +2624,16 @@ p{
         margin: 20px 0;
         background-color: #742296;
         color: white;
-        width: 82%;
-        height: 69vh;
+        width: 72%;
+        height: 53vh;
         padding: 20px 15px;
         position: relative;
     
 
         .more{
 
-            height: 66.2vh;
-            width:96%;
+            height: 50.9vh;
+            width:94.9%;
             display: flex;
             align-items: end;
             justify-content:end ;
@@ -2621,7 +2644,7 @@ p{
             object-fit: contain;
             width: 13%;
             height: 6vh;
-            opacity: 70%;
+            opacity: 100%;
             margin-right:3.2px;
          
          }
@@ -2631,39 +2654,45 @@ p{
 
 
       h3{
-        font-size: 15px;
+        font-size: 14px;
         
       }
 
       li{
-        font-size: 15px;
-        padding: 1px;
+        font-size: 10px;
+        padding: 0px;
 
     
 
       }
 
       h4{
-        font-size: 17px;
+        font-size: 14px;
+
+        .line{
+            width: 55px;
+            }
+
       }
 
       li:first-child {
-        font-size: 14px;
+        font-size: 12px;
       }
 
+  
 
     }
 
 
     .foni{
-        width: 81%;
-        height: 69vh;
-       
+        width: 72%;
+        height: 53vh;
+
 
     }
 
     .bad{
-        height: 69.1vh;
+       height: 53.89vh;
         width:100%;
  
     
@@ -2678,8 +2707,8 @@ p{
             h5{
                
                 font-size: 17px;
-                padding-right: 89px;
-                margin-bottom: 11px;
+                padding-right: 70px;
+                margin-bottom: 15px;
 
             }
 
@@ -2845,7 +2874,115 @@ width: 50%;
 }
 
 
+@media (min-width: 414px) and (max-width:500px) {
 
+
+    .main-nav {
+        padding: 20px 0px 0 0;
+    }
+
+    .main-nav .nav-bar {
+        margin-right: 118px;
+    }
+
+    .banner .text h1 {
+        font-size: 31px;
+        margin-top: 0px;
+        line-height: 32px;
+    }
+
+    .main-nav img {
+        height: 7vh;
+        width: 100%;
+        -o-object-fit: contain;
+        object-fit: contain;
+        margin-left: -4px;
+    }
+
+    .banner img {
+        width: 184px;
+        height: 57vh;
+        -o-object-fit: cover;
+        object-fit: cover;
+        padding-right: 13px;
+    }
+
+    .about .container .gun #video {
+        width: 350px;
+        height: 250px;
+    }
+
+    .about .container .gallery img {
+        height: 25.5vh;
+        width: 167px;
+        margin-bottom: 12px;
+        margin-right: 13px;
+        object-fit: cover;
+    }
+
+    .about .container .rong {
+        margin-left: 24px;
+    }
+
+    .about .container .gun {
+        padding-left: 22px;
+    }
+
+    .main .get .kim1 {
+        display: flex;
+        justify-content: flex-end;
+        -o-object-fit: contain;
+        object-fit: contain;
+        align-items: end;
+        width: 358px;
+        height: 39vh;
+    }
+
+    .main .get .kim2 {
+        margin-top: 20px;
+        margin-left: -40px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: end;
+        width: 359px;
+        height: 42vh;
+    }
+
+    .main .get .kim1 .visa {
+        -o-object-fit: contain;
+        object-fit: contain;
+        width: 8%;
+        height: 4vh;
+        margin-left: 24PX;
+    }
+
+    .main .get .kim2 .late {
+        -o-object-fit: contain;
+        object-fit: contain;
+        width: 8%;
+        height: 3.8vh;
+        margin-left: 20PX;
+    }
+
+    .services .super .more img {
+        -o-object-fit: contain;
+        object-fit: contain;
+        width: 13%;
+        height: 5.80vh;
+        opacity: 100%;
+        margin-right: 1.2px;
+    }
+
+    .services .super .more img {
+        -o-object-fit: contain;
+        object-fit: contain;
+        width: 13%;
+        height: 5.80vh;
+        opacity: 100%;
+        margin-right: 1.2px;
+    }
+
+}
 
 
 
@@ -3156,3 +3293,275 @@ width: 50%;
 }
 
 
+
+
+// @media only screen and (min-width: 660.98px) and (max-width:990px) {
+
+//     .main-nav .nav-bar {
+//         margin-right: 80px;
+//     }
+
+//     .main-nav img {
+//         height: 7vh;
+//         width: 100%;
+//         -o-object-fit: contain;
+//         object-fit: contain;
+//         margin-left: -18px;
+//     }
+
+//     .banner .text h1 {
+//         font-size: 31px;
+//         margin-top: 0px;
+//         line-height: 32px;
+//     }
+
+//     .banner img {
+//         width: 188px;
+//         height: 46vh;
+//         -o-object-fit: cover;
+//         object-fit: cover;
+//         padding-right: 13px;
+//     }
+
+//     .banner .text .fill p:first-of-type {
+//         margin: 15px 0 0 0;
+//         font-size: 16px;
+//     }
+
+//     .banner .fill p:last-of-type {
+//         margin: 3px 0 0 0;
+//         color: #000;
+//         font-family: "JosefinSans-Regular";
+//         font-size: 14px;
+//         line-height: 10px;
+//         display: flex;
+//         align-items: baseline;
+//     }
+
+//     .about .container .rong {
+//         margin-left: 39px;
+//     }
+
+//     .about .container .gun {
+//         padding-left: 39px;
+//     }
+
+//     .about .container .gun #video {
+    
+//         width:365px; 
+//         height:305px;
+// }
+
+
+// .about {
+//     padding: 7px 26px;
+// }
+
+// .about .container p {
+//     font-size: 15px;
+//     margin-bottom: 17px;
+//     line-height: 17px;
+// }
+
+// .about .container .gun p {
+//     padding-top: 12px;
+//     padding-bottom: 16px;
+//     margin: 0;
+//     font-size: 15px;
+// }
+
+// .services h2 {
+//     font-size: 22px;
+//     padding-bottom: 15px;
+//     width: 252px;
+// }
+
+// .services .now {
+//     width: 65%;
+//     height: 40vh;
+// }
+
+// .services .foni {
+//     width: 65%;
+//     height: 40vh;
+// }
+
+// .services .bad {
+//     height: 40.89vh;
+//     width: 100%;
+// }
+
+// .services .now .good{
+//     height: 40.89vh;
+//     width: 100%;
+// }
+
+// .services .now .good img {
+//     margin-left: 18px;
+//     width: 13.6%;
+//     height: 3.5vh;
+// }
+
+// .services .bad img {
+//     margin-left: 15px;
+//     width: 13.6%;
+//     height: 5.5vh;
+// }
+
+// .services .super {
+//     margin: 20px 0;
+//     background-color: #742296;
+//     color: white;
+//     width: 66%;
+//     height: 41vh;
+//     padding: 20px 15px;
+//     position: relative;
+// }
+
+// .services .super .more {
+//     height: 39vh;
+//     width: 94.9%;
+//     display: flex;
+//     align-items: end;
+//     justify-content: end;
+//     position: absolute;
+// }
+
+// .main .get .kim1 {
+//     align-items: end;
+//     width: 366px;
+//     height: 37vh;
+// }
+
+// .main .get p {
+//     font-size: 14px;
+//     margin: 10px 0;
+// }
+
+// .main .get .kim2 {
+//     margin-top: 20px;
+//     margin-left: -40px;
+//     width: 364px;
+//     height: 37vh;
+// }
+
+// .main .get p {
+//     font-size: 14px;
+//     margin: 10px 0;
+// }
+
+// .instagram .demo img {
+//     width: 108px;
+//     height: 31vh;
+//     padding: 3px;
+//     -o-object-fit: cover;
+//     object-fit: cover;
+// }
+// }
+
+// @media only screen and (max-width: 700.98px) {
+
+//     .main-nav img {
+//         height: 7vh;
+//         width: 100%;
+//         -o-object-fit: contain;
+//         object-fit: contain;
+//         margin-left: 14px;
+//     }
+
+//     .banner img {
+//         width: 166px;
+//         height: 50vh;
+//         -o-object-fit: cover;
+//         object-fit: cover;
+//         padding-right: 13px;
+//     }
+//     .rong {
+//         margin-left: 59px;
+//     }
+
+//     .about .container .gallery img {
+//         height: 27.3vh;
+//         margin-bottom: 12px;
+//         margin-right: 13px;
+//     }
+
+
+//     .about .container p {
+//         font-size: 13px;
+//         margin-bottom: 17px;
+//         line-height: 17px;
+//     }
+
+//     .about .container .gun p {
+//         padding-top: 12px;
+//         padding-bottom: 16px;
+//         margin: 0;
+//         font-size: 13px;
+//     }
+
+//     .about .container .gun #video {
+//         width: 326px;
+//         height: 206px;
+//     }
+
+//     .about .container .gun {
+//         padding-left: 59px;
+//     }
+
+//     .main .get .kim1 {
+//         display: flex;
+//         justify-content: flex-end;
+//         -o-object-fit: contain;
+//         object-fit: contain;
+//         align-items: end;
+//         width: 317px;
+//         height: 35vh;
+//     }
+
+//     .main .get .kim2 {
+//         margin-top: 20px;
+//         margin-left: -40px;
+//         display: flex;
+//         justify-content: flex-end;
+//         align-items: end;
+//         width: 314px;
+//         height: 35vh;
+//     }
+
+//     .main .get p {
+//         font-size: 12px;
+//         margin: 10px 0;
+//     }
+
+//     .instagram .demo img {
+//         width: 90px;
+//         height: 27vh;
+//         padding: 3px;
+//         -o-object-fit: cover;
+//         object-fit: cover;
+//     }
+// }
+
+// @media only screen and (max-width: 700.98px) {
+//     .main-nav img {
+//         height: 7vh;
+//         margin-left: -26px;
+//     }
+
+//     .banner img {
+//         width: 175px;
+//         height: 42vh;
+//         padding-right: 13px;
+//     }
+
+//     .about .container .gallery img {
+//         height: 22.3vh;
+//         margin-bottom: 12px;
+//         margin-right: 13px;
+//     }
+
+//     .rong {
+//         margin-left: 27px;
+//     }
+// }
